--- a/front-end/package.json
+++ b/front-end/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.1.2",
+    "@types/uuid": "^8.3.0",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
